--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
 # Use a Node.js image from Docker Hub
-FROM node:14
+FROM node:16-alpine
 
 # Set the working directory
 WORKDIR /usr/src/app
@@ -10,14 +10,16 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+## following 3 lines are for installing ffmepg
+RUN apk update
+RUN apk add
+RUN apk add ffmpeg
+
 # Bundle app source
 COPY . .
 
-# Make sure ffmpeg is installed
-RUN apt-get update && apt-get install -y ffmpeg
-
 # Expose the port the app runs on
-EXPOSE 3000
+EXPOSE 8080 6789
 
 # Start the app
 CMD [ "node", "server.js" ]
