--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "RTSP player for Node.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.1.0",
     "node-rtsp-stream": "^0.0.9",
     "nodemon": "^2.0.22",
     "ws": "^8.13.0"
