--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.1.0",
     "node-rtsp-stream": "^0.0.9",
     "nodemon": "^2.0.22",
     "ws": "^8.13.0"
